// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`global/components/utility/Pagination matches the snapshot 1`] = `
<Nav
  aria-label="Pagination"
>
  <Columns>
    <Column>
      <Link
        aria-disabled={true}
        as="a"
        href="#pagination-target"
        onClick={[MockFunction]}
      >
        <IconComposer
          fill="currentColor"
          icon="arrowLongLeft16"
          screenReaderText="previous page"
          svgProps={
            Object {
              "aria-hidden": true,
            }
          }
        />
        <span>
          Prev
        </span>
      </Link>
    </Column>
    <Column>
      <Pages>
        <Link
          aria-current="page"
          as="a"
          href="#pagination-target"
          onClick={[MockFunction]}
        >
          <span
            aria-hidden="true"
          >
            1
          </span>
          <span
            className="screen-reader-text"
          >
            Go to page: 
            1
          </span>
        </Link>
        <Link
          as="a"
          href="#pagination-target"
          onClick={[MockFunction]}
        >
          <span
            aria-hidden="true"
          >
            2
          </span>
          <span
            className="screen-reader-text"
          >
            Go to page: 
            2
          </span>
        </Link>
      </Pages>
    </Column>
    <Column>
      <Link
        aria-disabled={false}
        as="a"
        href="#pagination-target"
        onClick={[MockFunction]}
      >
        <span>
          Next
        </span>
        <IconComposer
          fill="currentColor"
          icon="arrowLongRight16"
          screenReaderText="next page"
          svgProps={
            Object {
              "aria-hidden": true,
            }
          }
        />
      </Link>
    </Column>
  </Columns>
</Nav>
`;

exports[`global/components/utility/Pagination when it is compact matches the snapshot 1`] = `
<Nav
  aria-label="Pagination"
>
  <Columns>
    <Column>
      <Link
        aria-disabled={true}
        as="a"
        href="#pagination-target"
        onClick={[MockFunction]}
      >
        <IconComposer
          fill="currentColor"
          icon="arrowLongLeft16"
          screenReaderText="previous page"
          svgProps={
            Object {
              "aria-hidden": true,
            }
          }
        />
        <span>
          Prev
        </span>
      </Link>
    </Column>
    <Column>
      <Pages>
        <span>
          Page 
          1
           
          /
           
          2
        </span>
      </Pages>
    </Column>
    <Column>
      <Link
        aria-disabled={false}
        as="a"
        href="#pagination-target"
        onClick={[MockFunction]}
      >
        <span>
          Next
        </span>
        <IconComposer
          fill="currentColor"
          icon="arrowLongRight16"
          screenReaderText="next page"
          svgProps={
            Object {
              "aria-hidden": true,
            }
          }
        />
      </Link>
    </Column>
  </Columns>
</Nav>
`;

exports[`global/components/utility/Pagination when there are no pagination props renders to null 1`] = `""`;
